WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103848
It should be possible to build and run with DFG_ENABLE(PROPAGATION_VERBOSE)
https://bugs.webkit.org/show_bug.cgi?id=103848
Summary
It should be possible to build and run with DFG_ENABLE(PROPAGATION_VERBOSE)
Filip Pizlo
Reported
2012-12-02 17:47:44 PST
In my refactoring of dataLog() statements I forgot to test with DFG_ENABLE(PROPAGATION_VERBOSE). Consequently, the build with that flag set is now broken and with trivial fixes, it will encounter some crashes. We should fix both the build and make it run again.
Attachments
the patch
(13.87 KB, patch)
2012-12-02 17:50 PST
,
Filip Pizlo
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-12-02 17:50:52 PST
Created
attachment 177168
[details]
the patch
Filip Pizlo
Comment 2
2012-12-02 18:00:51 PST
Landed in
http://trac.webkit.org/changeset/136357
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug