It should be possible to build and run with DFG_ENABLE(PROPAGATION_VERBOSE) https://bugs.webkit.org/show_bug.cgi?id=103848

Reviewed by Sam Weinig.

Source/JavaScriptCore:

Fix random dataLog() and print() statements.

* dfg/DFGArgumentsSimplificationPhase.cpp:
(JSC::DFG::ArgumentsSimplificationPhase::run):
* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseCodeBlock):
* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::dumpBlockHeader):
* dfg/DFGPredictionPropagationPhase.cpp:
(JSC::DFG::PredictionPropagationPhase::propagate):
* dfg/DFGStructureCheckHoistingPhase.cpp:
(JSC::DFG::StructureCheckHoistingPhase::run):

Source/WTF:

Increase the variadicity of dataLog() and print(), and add a pointerDump()
which allows passing a pointer to something that has a printInternal(). If
the pointer is null, it'll print "(null)"; otherwise it'll invoke the
printInternal() function.

* wtf/DataLog.h:
(WTF):
(WTF::dataLog):
* wtf/PrintStream.h:
(PrintStream):
(WTF::PrintStream::print):
(WTF):
(PointerDump):
(WTF::PointerDump::PointerDump):
(WTF::PointerDump::dump):
(WTF::pointerDump):



Canonical link: https://commits.webkit.org/121951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136357 268f45cc-cd09-0410-ab3c-d52691b4dbfc